# Dual-Lidar-Fusion

./: README.md  frames_2025-02-14_17.54.54.gv
lidar_fuse_robot/: .gitignore  package.xml  setup.cfg  setup.py
lidar_fuse_robot/config/: gz_bridge.yaml
lidar_fuse_robot/launch/: diff_bot.launch.py  diff_robot.launch.py  urdf_model.launch.py
lidar_fuse_robot/stl/: caster_new_front_plane.stl  lidar_front.stl  robot_base_top_plane.stl
lidar_fuse_robot/urdf/: gazebo_control.xacro  lidar.xacro  lidar_bot.urdf.xacro  robot_model.xacro
lidar_fuse_robot/worlds/: empty.world
lidar_fusion/: CMakeLists.txt  package.xml
lidar_fusion/include/lidar_fusion/: dataFuseNode.hpp
lidar_fusion/launch/: combined_scan.launch.py
lidar_fusion/params/: combinedscan_params.yaml  lidar_position.yaml
lidar_fusion/src/: dataFuseNode.cpp
